# ipop_diet_omics

./: README.md
diet_clinical_labs_inflammatory_markers/: diet_clinical_labs_longitudinal_associations  diet_cytokines_longitudinal_associations
diet_omics_ascvd_prediction/: ascvd_prediction
diet_omics_cross_sectional_corr/: diet_metabolome_cross_sectional_corr_analysis_final_rel.R  diet_microbiome_cross_sectional_corr.py  diet_microbiome_cross_sectional_figure.py  mediation_multilvel_analysis  nutrient_pathway_sankey_analysis_final_rel.R
diet_omics_longitudinal_associations/code/: 01_plot_cytokine_coefficients.R  02_plot_pathways.R  03_plot_correlation_heatmaps.R  04_plot_networks.R  05_plot_feature_shape_data.R  README.md  utils.R
diet_omics_longitudinal_associations/data_analysis/plot_data/: README.md  coefficients.csv
diet_omics_longitudinal_associations/data_analysis/plot_data/pathways/: nutrients_metabolites.csv  pathway_metabolite_ratio.csv
diet_pattern_analysis/: pyproject.toml
diet_pattern_analysis/common/: autoencoder.py  clustering.py  config.py  preprocessing.py  utils.py
diet_pattern_analysis/scripts/: nutrient_microbe_significance.py
diet_pattern_analysis/scripts/autoencoder/: cross_validate.py  filter_results.py  merge_results.py  train_final_model.py
diet_pattern_analysis/scripts/clustering/: food_group_piechart.py  main.py  merge_results.py  omic_differences.py  tsne_pca_plot.py
longitudinal_diet_analysis/: ipop_nutrient_time_analysis_nm_rel.R
(+80 files in other folders)
