[project]
name = "diet-pattern-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras==2.12.0",
    "pandas>=2.1.0",
    "scikit-learn==1.3.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.0",
    "tensorflow==2.12.0",
]

[tool.setuptools]
packages = ["common"]
